适配: minSdk 28→30，统一 Android 11~17 支持
- build.gradle minSdk 30，新增 androidx.annotation (compileOnly)
- 清理 11 以下遗留：READ/WRITE_EXTERNAL_STORAGE maxSdk=32 移除
- 修复 4 处 NewApi：URLEncoder.encode(Charset)/readAllBytes/Path.of/OnBackAnimationCallback 守卫 33→34
- 修复底部 Tab 栏被导航栏 inset 挤出屏幕（绝对值赋值防累加膨胀 + >=35 门控）
- CI SDK 同步 platforms;android-17 + build-tools;37.0.0
- README 徽章与说明同步；lint NewApi 0